--- a/assets/translations/strings.csv
+++ b/assets/translations/strings.csv
@@ -1,9 +1,23 @@
 key,en,zh_TW
 sign_in,Sign In,登入
+sign_out,Sign Out,登出
+sign_up,Sign Up,註冊
 email,Email,電子郵件
 password,Password,密碼
 sign_in_with_google,Sign in with Google,使用 Google 帳戶登入
+no_account_prompt,Don't have an account?,還沒有帳號嗎？
+not_signed_in,Not signed in,未登入
 silversole,SilverSole,SilverSole
 or,OR,或
 new_version,New Version %1$s,發現新版本 %1$s
 coming_soon,Coming Soon!,即將推出!
+field_required,This field is required,此欄位為必填
+sign_up_intro,Enter the following details to complete registration,輸入以下資料完成註冊
+confirm_password,Confirm password,密碼確認
+invalid_email,Invalid email address,電子郵件格式不正確
+password_mismatch,Passwords do not match,兩次輸入的密碼不一致
+sign_up_success,Sign Up Success,註冊成功
+sign_in_success,Sign In Success,登入成功
+sign_out_success,Sign Out Success,登出成功
+email_not_confirmed,Email not Confirmed,信箱尚未驗證
+invalid_credentials,Invalid email or password,帳號或密碼錯誤
