--- a/assets/translations/strings.csv
+++ b/assets/translations/strings.csv
@@ -86,3 +86,10 @@ set_primary_device_content,Set {deviceName} as your primary device? The app will
 set_primary_device_success,Primary device updated,已設為主要裝置
 no_primary_device_title,No primary device available,目前沒有可用的主要裝置
 no_primary_device_body,Go to “Devices” to add a device then enable any device to get started.,前往「裝置」新增裝置後，啟用任一裝置即可開始使用。
+rename,Rename,重新命名
+rename_this_device,Rename this device,重新命名此裝置
+delete,Delete,刪除
+delete_device_title,Delete this device?,要刪除此裝置嗎？
+delete_device_content,This action cannot be undone. You can pair it again later.,此操作無法復原，你之後仍可重新配對。
+rename_device_success,Device renamed successfully,裝置名稱已更新
+delete_device_success,Device deleted successfully,裝置已刪除
