feat(refactor): Added real-time Bluetooth monitoring mode, dataRefactor device data provider from UI
v1.0.0
更新內容:
•
因重構基於資料庫之前端架構，與先前版本較有較大差異
•
裝置頁新增配對按鈕，使用藍牙偵測 SilverSole BLE 裝置
•
裝置頁新增重命名裝置、刪除裝置功能
•
支持前台服務 (僅限Android)
•
支持自動連線、斷線重連 (若已綁定主要裝置)
•
新增藍牙實時監測模式
•
修復首次進入應用程式時預設非深色主題的問題
•
重構未綁定裝置時的 UI 表現
•
暫不支持遠端查看資料 (即目前無法查看資料庫狀態)
•
暫不支持上傳資料至資料庫
Updates:
•
Due to a database-driven frontend architecture refactor, this version differs significantly from previous versions.
•
Added a pairing button on the Devices page to scan for SilverSole BLE devices via Bluetooth.
•
Added device renaming and device deletion on the Devices page.
•
Added foreground service support (Android only).
•
Supports auto-connect and auto-reconnect after disconnection (when a primary device is already set).
•
Added real-time Bluetooth monitoring mode.
•
Fixed the issue where the app did not default to dark theme on first launch.
•
Refactored the UI for the unbound/unpaired device state.
•
Remote data viewing is not supported yet (database status cannot be viewed at this time).
•
Uploading data to the database is not supported yet.

--- a/assets/translations/strings.csv
+++ b/assets/translations/strings.csv
@@ -93,3 +93,5 @@ delete_device_title,Delete this device?,要刪除此裝置嗎？
 delete_device_content,This action cannot be undone. You can pair it again later.,此操作無法復原，你之後仍可重新配對。
 rename_device_success,Device renamed successfully,裝置名稱已更新
 delete_device_success,Device deleted successfully,裝置已刪除
+coming_soon,Coming Soon,敬請期待
+coming_soon_content,This feature is not available yet. Stay tuned for updates.,功能尚未開放，等待後續更新。
